Adding pry-byebug gem and testing for single accounts

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,3 +1,9 @@
-<p>"balance"</p>
+balance
 pin
 account number
+
+<% @account.each do |account| %>
+<%= account.account_number %>
+<%= account.balance %>
+<%= account.pin %>
+<%end%>
