Linking index to show page

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -3,7 +3,7 @@ pin
 account number
 
 <% @account.each do |account| %>
-<%= account.account_number %>
+<%= link_to account.account_number, accounts_path(account) %>
 <%= account.balance %>
 <%= account.pin %>
 <%end%>
