fixing routing bugs

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -3,7 +3,7 @@ pin
 account number
 
 <% @account.each do |account| %>
-<%= link_to account.account_number, accounts_path(account) %>
+<%= link_to account.account_number, "/accounts/#{account.id}" %>
 <%= account.balance %>
 <%= account.pin %>
 <%end%>
